--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "serpapi": "^1.1.1",
     "supports-color": "^9.3.1",
     "tailwindcss": "3.3.2",
