--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
+    "react-feather": "^2.0.10",
+    "react-icons": "^4.12.0",
     "serpapi": "^1.1.1",
     "supports-color": "^9.3.1",
+    "swiper": "^11.0.5",
     "tailwindcss": "3.3.2",
     "youtube-transcript": "^1.0.6"
   },
