--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.12.0",
+    "react-top-loading-bar": "^2.3.1",
     "serpapi": "^1.1.1",
     "supports-color": "^9.3.1",
     "swiper": "^11.0.5",
