--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
+    "formidable": "^3.5.1",
     "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.75",
+    "multiparty": "^4.2.3",
     "next": "13.4.1",
     "openai": "^3.2.1",
     "pdf-parse": "^1.1.1",
